data/all_generated_tests/raw_wast_tests/loop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1208.wast
;; 9. **Test 9**:    - Description: Design a loop that branches (`br`) to an outer function label after calling an imported function and verify if the return values are correctly handled.    - Specific Constraint: Validate that the outer function’s label maintains the stack consistency when control flow returns from the external call.    - Control Flow Relation: Checks correct branching out to external labels and managing stack across module boundaries.

(assert_invalid
 (module
  (import "env" "externalFunc" (func $externalFunc (result i32)))
  (func $outer (result i32)
   (block (result i32)
    (loop (result i32)
     (call $externalFunc)
     (br 1)
    )
   (i32.const 0))
  )
 )
 "type mismatch"
)